--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </video>
       <p>Bare-mental implementation of “AimLabs”-inspired aim trainer with C in Raspberry Pi A+ as final Project for CS107E. Built the operating system, libraries, and game from scratch. I integrated PS/2 mouse movement and programmed game play and graphics while my partners integrated I2C nunchuck movement, starting screen, and leaderboard.   </p>
       <img width="520" height="640" src="Images\PaintCS107E.jpg" alt="Description of the image">
-      <p>Painting application built on Raspberry Pi using PS/2 mouse. Users can switch between an array of colors, draw, and erase. </p>
+      <p>Basic paint built on Raspberry Pi using PS/2 mouse. Users can switch between an array of colors, draw, and erase. </p>
     </div>
     <div class="project">
         <h2>Unity Augmented Reality Projects</h2>
@@ -78,6 +78,11 @@
       <p>Virtual Reality aim trainer made in Unity for practice and A platformer game with 2 levels made in GameMakerStudios.   </p>
    </div>
     <div class="project">
+      <h2> Personal Gallery Website </h2>
+      <img width="960" height="540" src="Images\CS193X.png" alt="Description of the image">
+      <p>Full-stack website development written with Node JS, Express JS, and MongoDB. Designed a website with a horizontally scrolling gallery as final project for CS193X that can be used as an art portolio, photo album, moodboard, idea list, and more. </p>
+    </div>
+    <div class="project">
         <h2>Android Studios Applications</h2>        
         <video width="300" height="600" controls> 
           <source src = "Videos\Android Studios Reel.mp4" type="video/mp4">
@@ -92,11 +97,6 @@
         Your browser does not support the video tag.
       </video>
       <p>Final Project for CS248A. Randomly populates a room with furniture and objects and floor plans.  </p>
-    </div>
-    <div class="project">
-      <h2> Personal Gallery Website </h2>
-      <img width="640" height="360" src="Images\CS193X.png" alt="Description of the image">
-      <p>Designed a website with a horizontally scrolling gallery. Suitable as an art portolio, photo album, bucket list, and more. </p>
     </div>
 </body>
 </html>
