--- a/index.html
+++ b/index.html
@@ -62,12 +62,19 @@
       <p>Basic paint built on Raspberry Pi using PS/2 mouse. Users can switch between an array of colors, draw, and erase. </p>
     </div>
     <div class="project">
-        <h2>Unity Augmented Reality Projects</h2>
-        <video width="270" height="600" controls> 
-          <source src="Videos\Unity Augmented Reality Reel.mp4" type="video/mp4">
-          Made in Unity for CS11SI. 
-        </video>
-        <p>Made in Unity for CS11SI.</p>
+      <h2>Microsoft Hololens 2 & Electromagnetic Tracking System for Brachytherapy @ Stanford IMMERS Lab</h2>
+      <video width="640" height="360" controls> 
+        <source src="Videos\Hololens.mp4" type="video/mp4">
+      </video>
+      <p>Built Unity program for HoloLens 2 for ultrasound-guided brachytherapy 
+        using electromagnetic tracking and augmented reality visualization of treatment needles.</p>
+  </div>
+    <div class="project">
+      <h2>Unity Augmented Reality Projects</h2>
+      <video width="270" height="600" controls> 
+        <source src="Videos\Unity Augmented Reality Reel.mp4" type="video/mp4">
+      </video>
+      <p>Dynamic lighting detection/reaction, plane detection, and image tracking. Made in Unity for CS11SI.</p>
     </div>
     <div class="project">
       <h2>Unity VR Aim Trainer & GameMakerStudios Platformer</h2>
