--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
     <header>
-        <h1>My Project Showcase</h1>
+        <h1>Felicity Huang - Stanford 2025 - Computer Science BS - Project Showcase</h1>
     </header>    
     <div class="project">
       <h2>Raspberry Pi Mouse & Nun-chuck Aim Trainer </h2>
