--- a/index.html
+++ b/index.html
@@ -67,14 +67,32 @@
         <source src="Videos\Hololens.mp4" type="video/mp4">
       </video>
       <p>Built Unity program for HoloLens 2 for ultrasound-guided brachytherapy 
-        using electromagnetic tracking and augmented reality visualization of treatment needles.</p>
-  </div>
+        using electromagnetic tracking and augmented reality visualization of treatment needles. 
+        Note: The virtual and physical objects look poorly aligned in the recording because the HoloLens camera 
+        is not where your eyes are.</p>
+    </div>
     <div class="project">
       <h2>Unity Augmented Reality Projects</h2>
       <video width="270" height="600" controls> 
         <source src="Videos\Unity Augmented Reality Reel.mp4" type="video/mp4">
       </video>
       <p>Dynamic lighting detection/reaction, plane detection, and image tracking. Made in Unity for CS11SI.</p>
+    </div>
+    <div class="project">
+      <h2>VR x AI Multiplayer Painting Game</h2>
+      <iframe width="640" height="360" src="https://youtu.be/D622-WeCsV0"> 
+      </iframe>
+      <p>Multiplayer VR painting game using hand tracking and AI generation (DALL-E, Stable Diffusion, CLIP) for competitive fun, full-body workout, and group bonding.
+        Built for ImmerseGT 2023. Two players compete to replicate an AI-generated image from DALL-E under time constraint. Their paintings are refined by Stable Diffusion 
+        and judged by CLIP AI model on the best resemblance to the original image.</p>
+      <a href="https://devpost.com/software/the-pen-is-mighter-than-the-sword"> Devpost: https://devpost.com/software/the-pen-is-mighter-than-the-sword</a>
+    </div>
+    <div class="project">
+      <h2>VR x Arduino Bloodstream Education Game</h2>
+      <iframe width="640" height="360" src="https://youtu.be/zH3GdwHmTME"> 
+      </iframe>
+      <p>An educational game that integrates VR and Arduino heart rate sensor for a personalized learning experience of the bloodstream and vascular repair process. Built for TreeHacks 2023.</p>
+      <a href="https://devpost.com/software/blood-vessel-experience"> Devpost: https://devpost.com/software/blood-vessel-experience</a>
     </div>
     <div class="project">
       <h2>Unity VR Aim Trainer & GameMakerStudios Platformer</h2>
