--- a/index.html
+++ b/index.html
@@ -50,7 +50,29 @@
 <body>
     <header>
         <h1>Felicity Huang - Stanford 2025 - Computer Science BS - Project Showcase</h1>
-    </header>    
+    </header> 
+    <div class="project">
+      <h2>CS231N Final Project Poster: Head Movement and Facial Expression Detection: An Alternate Input System
+        for Gamers with Muscular Disabilities</h2>
+      <embed
+        src="Documents\CS231n.pdf"
+        type="application/pdf"
+        frameBorder="0"
+        scrolling="auto"
+        height="400px"
+        width="100%"
+      ></embed>
+    </div> 
+    <div class="project">
+      <h2>CS153 Applied Security at Scale Final Paper: Phishing and LLMs</h2>
+      <iframe
+        src="Documents\CS153_final_project.pdf"
+        frameBorder="0"
+        scrolling="auto"
+        height="400px"
+        width="100%"
+      ></iframe>  
+    </div>   
     <div class="project">
       <h2>Raspberry Pi Mouse & Nun-chuck Aim Trainer </h2>
       <video width="640" height="360" controls> 
