--- a/index.html
+++ b/index.html
@@ -7,31 +7,44 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            background-image: url(Images/road.jpg);
+            /*background-image: linear-gradient(#e9b7ce, #d3f3f1);*/
+            background-repeat: repeat;
+            background-attachment: fixed;
+            background-size: cover;
             background-color: #f0f0f0;
             margin: 0;
             padding: 0;
         }
         header {
-            background-color: #333;
+            /*background-image: linear-gradient(#0b3866, #145277);
+            background-color: #0b3866; */
+            background-color: rgba(255, 255, 255, 0.1);            
+            backdrop-filter: blur(30px);
             color: #fff;
             text-align: center;
-            padding: 20px;
+            padding: 40px;
         }
         h1 {
             margin: 0;
+            font-weight: bold;
+            letter-spacing: 5px;
+            font-size: large;
         }
         .project {
             margin: auto;
-            margin-bottom: 20px;
-            margin-top: 20px;
-            background-color: #fff;
-            border-radius: 5px;
+            margin-bottom: 40px;
+            margin-top: 40px;
+            background-color: rgba(255, 255, 255, 0.1);
+            color: white;
+            backdrop-filter: blur(30px);
+            border-radius: 25px;
             padding: 20px;
-            width: 80%;
+            width: 70%;
             text-align: center;
-        }
-        .project h2 {
-            color: #333;
+            border-style: solid;
+            border-color: rgba(255, 255, 255, 0.5);
+            border-width: 2px;
         }
         .video-container {
             position: relative;
