research paper link

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
             letter-spacing: 5px;
             font-size: large;
         }
+        a {
+            color:rgb(0, 23, 87);
+            font-weight: bold;
+        }
         .container {
           display: grid;
           column-gap: 50px;
@@ -113,9 +117,11 @@
           is not where your eyes are.</p>
       </div>
 
-      <!-- <div class="project">
+      <div class="project">
         <h2>Oak Story: LLM-Guided AR Education @ Stanford Human Computer Interaction Group</h2>
-        <div class="video-scroll-container">
+        <p>Published Research:</p>
+        <a href="Oak Story: Improving Learner Outcomes with LLM-Mediated Interactive Narratives"> Oak Story: Improving Learner Outcomes with LLM-Mediated Interactive Narratives</a>
+        <!-- <div class="video-scroll-container">
           <div>
             <h2>Oak Woodpecker</h2>
             <video width="270" height="600" controls>
@@ -140,8 +146,8 @@
               <source src="Videos\Android Studios Reel.mp4" type="video/mp4">
             </video>
           </div>
-        </div>
-      </div> -->
+        </div> -->
+      </div>
 
     <!-- <div class="project">
         <h2>LLM-Powered Chronic Pain Tracker</h2>
