--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             font-size: large;
         }
         a {
-            color:rgb(0, 23, 87);
+            color:rgb(60, 255, 213);
             font-weight: bold;
         }
         .container {
@@ -66,12 +66,13 @@
             width: 100%;
             height: 100%;
         }
-        .video-scroll-container {
+        .flex-container {
           display: flex;
           flex-direction: row;
           overflow-x: auto;
-          gap: 20px;
-          padding: 20px;
+          justify-content: space-between;
+          margin-left: 5%;
+          margin-right: 5%;
         }
     </style>
 </head>
@@ -119,51 +120,67 @@
 
       <div class="project">
         <h2>Oak Story: LLM-Guided AR Education @ Stanford Human Computer Interaction Group</h2>
-        <p>Published Research:</p>
-        <a href="Oak Story: Improving Learner Outcomes with LLM-Mediated Interactive Narratives"> Oak Story: Improving Learner Outcomes with LLM-Mediated Interactive Narratives</a>
-        <!-- <div class="video-scroll-container">
+        <p>Created under Professor James Landay. Published Research Paper:</p>
+        <a href="https://dl.acm.org/doi/10.1145/3746059.3747698"> Oak Story: Improving Learner Outcomes with LLM-Mediated Interactive Narratives</a>
+        <div class="flex-container">
           <div>
-            <h2>Oak Woodpecker</h2>
-            <video width="270" height="600" controls>
-              <source src="Videos\Android Studios Reel.mp4" type="video/mp4">
-            </video>
+            <h3>LLM Architecture</h3>
+            <img width="520" height="320" src="Images/OakLLMPrompt.PNG" alt="Description of the image">
           </div>
           <div>
-            <h2>Oak Forest Portal</h2>
-            <video width="270" height="600" controls>
-              <source src="Videos\Android Studios Reel.mp4" type="video/mp4">
-            </video>
-          </div>
-          <div>
-            <h2>Digging up Acorns</h2>
-            <video width="270" height="600" controls>
-              <source src="Videos\Android Studios Reel.mp4" type="video/mp4">
-            </video>
-          </div>
-          <div>
-            <h2>Oak Tree Growth</h2>
-            <video width="270" height="600" controls>
-              <source src="Videos\Android Studios Reel.mp4" type="video/mp4">
-            </video>
-          </div>
-        </div> -->
-      </div>
-
-    <!-- <div class="project">
-        <h2>LLM-Powered Chronic Pain Tracker</h2>
-        <div class="video-scroll-container">
-          <div>
-            <h2>Demo Video</h2>
-            <video width="270" height="600" controls>
-              <source src="Videos\Android Studios Reel.mp4" type="video/mp4">
-            </video>
-          </div>
-          <div>
-            <h2>Graphs Page</h2>
-            <img width="270" height="600" src="Images\CS193X.png">
+            <h3>3D Texturing</h3>
+            <img width="520" height="320" src="Images\OakModeling.PNG" alt="Description of the image">
           </div>
         </div>
-      </div> -->
+        <h3>Augmented Reality Activities [Unity, Niantic Lightship SDK]</h3>
+        <div class="flex-container">
+          <div>
+            <p>1. Digging up Acorns</p>
+            <video width="270" height="600" controls>
+              <source src="Videos\Oak1.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div>
+            <p>2. Acorn Woodpecker</p>
+            <video width="270" height="600" controls>
+              <source src="Videos\Oak2.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div>
+            <p>3. Oak Forest Portal</p>
+            <video width="270" height="600" controls>
+              <source src="Videos\Oak3.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div>
+            <p>4. Oak Tree Growth</p>
+            <video width="270" height="600" controls>
+              <source src="Videos\Oak4.mp4" type="video/mp4">
+            </video>
+          </div>
+        </div>
+      </div>
+
+    <div class="project">
+        <h2>LLM-Powered Chronic Pain Tracker</h2>
+        <p>Created with React Native, Supabase, and Mistral AI for CS194W. Chronic pain tracker with LLM-powered health data extraction, visualization, report-generation.</p>
+        <div class="flex-container">
+          <div>
+            <h3>Demo Video</h3>
+            <video width="270" height="600" controls>
+              <source src="Videos\194wVideo.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div>
+            <h3>Logs Detail</h3>
+            <img width="270" height="600" src="Images\194wLog.jpg">
+          </div>
+          <div>
+            <h3>Health Charts</h3>
+            <img width="270" height="600" src="Images\194wGraphs.jpg">
+          </div>
+        </div>
+      </div>
     
     <div class="project">
       <h2>Raspberry Pi Mouse & Nun-chuck Aim Trainer </h2>
