--- a/index.html
+++ b/index.html
@@ -54,17 +54,8 @@
             border-color: rgba(255, 255, 255, 0.5);
             border-width: 2px;
         }
-        .video-container {
-            position: relative;
-            padding-bottom: 56.25%; /* 16:9 aspect ratio */
-            height: 0;
-        }
-        .video-container iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+        video {
+          margin: 10px;
         }
         .flex-container {
           display: flex;
@@ -80,7 +71,19 @@
     <header>
         <h1>Felicity Huang - Stanford BS 2025 MS 2026 - Computer Science (Systems/AI) - Project Showcase</h1>
     </header> 
+    
     <div class = "container">
+      <div class="project">
+        <h2>CS123 Final Project: Basketball-Launcher Pupper</h2>
+        <video width="640" height="360" controls> 
+          <source src="Videos\pupper_shoot.MOV" type="video/mp4">
+        </video>
+        <video width="200" height="360" controls> 
+          <source src="Videos\pupper_follow.mp4" type="video/mp4">
+        </video>
+        <p>From printed parts to voice-commandable robot dog: "Pupper" is our quadruped robot born out of a Raspberry Pi and Hailo AI chip. Throughout the quarter, we helped Pupper trot through inverse kinematics and reinforcement learning polices and interact with the world using computer vision and LLM APIs. Using neural controller, Yolo object detection, and OpenAI voice API, Pupper can interpret natural language and execute commands like bark, wiggle, and follow [object]. For our final project, we augmented Pupper with an additional ball-launching mechanism cadded and assembled ourselves. Pupper can now find and stop before the designated target "stop sign" to shoot the ball.</p>
+        <a href="https://github.com/eimanjawwad/final_project_lab7">Github Repo</a>
+      </div>
     
       <div class="project">
         <h2>CS224R Final Project Poster: Exploring Coherence-Verbosity Trade-off in Multi-objective DPO RLHF Training for LLMs</h2>
